src/objects/Property_New__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Listed__c</fullName>
        <label>Date Listed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_days_in_Market__c</fullName>
        <formula>TODAY() -  Date_Listed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of days in Market</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Rentout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TobeSold_New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TobeSold_Resale</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Property New</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PN-{0000}</displayFormat>
        <label>Property New Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Properties_New</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>